crates/test-files/fixtures/compile_errors/circular_dependency_create.fe
contract Foo:
    pub fn bar() -> address:
        foo: Foo = Foo.create(0)

        return address(foo)